syntax = "proto3";

//
// 道具数据
//
message ItemData {
    int32   item_id   = 1; // 道具ID
    int32   item_num  = 2; // 道具数量
}

//
// 技能物品
//
message SkillItem {
    uint32  skill_id  = 1; // 技能ID
    int32   level     = 2; // 技能等级
    int32   key_pos   = 3; // 技能快捷键位置
}
